--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,8 @@ img{max-width:100%;}
 }
 body {
 	font-family: Arial, Helvetica, sans-serif;
-	background: #FFF;
+	background: rgba(255,255,255, 0);
+	
 }
 .wrap {
 	width:80%;
@@ -60,7 +61,7 @@ body {
 	font-weight:bold;
 }
 .call p span.number{
-	color:lightblue;
+	color:#2eadd3;
 	font-size:1em;
 	letter-spacing:1px;
 }
@@ -104,7 +105,7 @@ body {
 }
 .cart p span{
 	font-size:1.5em;
-	color:lightblue;
+	color:#2eadd3;
 }
 .wrapper-dropdown-2 {
     display:inline-block;
@@ -125,7 +126,7 @@ body {
     margin-top:0px;
     border-width: 6px 6px 0 6px;
     border-style: solid;
-    border-color:lightblue transparent;
+    border-color:#2eadd3 transparent;
 }
 .wrapper-dropdown-2 .dropdown {
     position: absolute;
@@ -195,7 +196,7 @@ body {
    transition: all .9s;
 }
 .menu li a:hover,.menu li.active a{
-	background:lightblue;
+	background:#2eadd3;
 }
 .menu li:first-child  a{
 	border-radius:6px 0 0 6px;
@@ -243,18 +244,19 @@ body {
 }
 .categories{
 	border:1px solid #EEE;
+	background: rgba(255,255,255, 1);
 }
 .categories h3{
-	font-size:1.2em;
+	font-size:1.6em;
 	color:#FFF;
 	padding:10px;
-	background:lightblue;
+	background:#2eadd3;
 	text-transform:uppercase;
 	font-family: 'ambleregular';	
 }
 .categories li a{
 	display:block;
-	font-size:0.8em;
+	font-size:1.2em;
 	padding:8px 15px;
     color: #9C9C9C;
     font-family: 'ambleregular';
@@ -267,7 +269,7 @@ body {
 	border:none;
 }
 .categories li a:hover{
-	color:lightblue;
+	color:#2eadd3;
 }
 .header_bottom_right{
 	float:left;
@@ -277,7 +279,7 @@ body {
 /***** Content *****/
 .content {
 	padding: 20px 0;
-	background: #FFF;
+	background: rgba(255,255,255, 0);
 }
 .content h2 {
 	color: #383838;
@@ -332,6 +334,7 @@ body {
 	-webkit-box-shadow: 0px 0px 3px rgb(150, 150, 150);
 	-moz-box-shadow: 0px 0px 3px rgb(150, 150, 150);
 	-o-box-shadow: 0px 0px 3px rgb(150, 150, 150);
+	background: rgba(255,255,255, 1);
 }
 .grid_1_of_4:first-child {
 	/*margin-left: 0;*/
@@ -363,7 +366,7 @@ body {
 }
 .price-details{
 	margin-top:10px;
-	border-top:1px solid lightblue;
+	border-top:1px solid #2eadd3;
 }
 .price-number{
 	float: left;
@@ -383,7 +386,7 @@ body {
 	display: block;
 	padding:10px 15px;
 	font-family: 'ambleregular';
-	background:lightblue;
+	background:#2eadd3;
 	color: #FFF;
 	text-decoration: none;
 	outline: 0;
@@ -399,7 +402,7 @@ body {
 /*** Footer ***/
 .footer {
 	position: relative;
-	/*background: #FCFCFC;*/
+	background: #FCFCFC;
     border-top: 1px solid #CECECE;
     margin:20px auto;
 }
@@ -548,7 +551,7 @@ body {
 	font-family: 'ambleregular';
 }
 .back-links p a:hover, .back-links p a:active {
-	color:lightblue;
+	color:#2eadd3;
 }
 .image {
 	clear: both;
@@ -609,7 +612,7 @@ body {
 .span_3_of_2  h2 {
 	font-family: 'ambleregular';
 	font-size: 1.1em;
-	color:lightblue;
+	color:#2eadd3;
 	font-weight: normal;
 	margin-top: 0px;
 	text-transform: uppercase;
@@ -630,11 +633,11 @@ body {
 .price p span {
 	font-size:3em;
 	font-family: 'ambleregular';
-	color:lightblue;;
+	color:#2eadd3;;
 }
 .available {
 	padding:20px 0;
-	border-top: 1px solid lightblue;
+	border-top: 1px solid #2eadd3;
 }
 .available p {
 	font-size: 0.9em;
@@ -753,7 +756,7 @@ body {
 	font-size:1em;
 	padding:10px 15px;
 	font-family: 'ambleregular';
-	background:lightblue;
+	background:#2eadd3;
 	color: #FFF;
 	text-decoration: none;
 	outline: 0;
@@ -821,7 +824,7 @@ body {
 	font-family :verdana, arial, helvetica, helve, sans-serif;
 }
 .your-review label span.red{
-	color:lightblue;
+	color:#2eadd3;
 	display:inline;
 }
 .your-review input[type="text"],.your-review textarea{
@@ -844,7 +847,7 @@ body {
     font-size:1em;
 	padding:10px 15px;
 	font-family: 'ambleregular';
-	background:lightblue;
+	background:#2eadd3;
 	color: #FFF;
 	text-decoration: none;
 	border:none;
@@ -870,7 +873,7 @@ body {
 }
 .span_3_of_1 li a:hover {
 	background: url(../images/drop_arrow-hover.png) no-repeat 0;
-	color:lightblue;
+	color:#2eadd3;
 }
 .span_3_of_2 .button {
 	float: right;
@@ -953,7 +956,7 @@ body {
 	-webkit-box-shadow: 1px 1px 0 0 #414141 inset, -1px -1px 0 0 #414141 inset, 0 1px 2px -1px rgba(0,0,0,0.15);
 }
 .community-poll p {
-	color: lightblue;
+	color: #2eadd3;
 	font-size: 0.85em;
 	padding:5px  0;
 }
@@ -1088,7 +1091,7 @@ body {
       margin:15px 0;
  }
 #posts .tab .post-title{
-	color:lightblue;
+	color:#2eadd3;
 	font-size:1em;
 	font-family: 'ambleregular';
 	overflow:hidden;
@@ -1147,7 +1150,7 @@ body {
 	border:1px solid #E0E0E0;
 }
 .news_desc  h3{
-	color:lightblue;
+	color:#2eadd3;
 	margin-bottom:0.3em;
 	font-size:1.2em;
 	text-transform:uppercase;
@@ -1157,7 +1160,7 @@ body {
 	text-decoration:underline;
 }
 .news_desc h4 span a:hover{
-	color:lightblue;
+	color:#2eadd3;
 	text-decoration:none;
 }
 .news_desc h4 ,.news_desc h4 a{
@@ -1173,7 +1176,7 @@ body {
 }
 .news_desc p a{
 	font-size:1em;
-	color:lightblue;
+	color:#2eadd3;
 }
 /*** Page numbers ***/
 .content-pagenation{
@@ -1282,7 +1285,7 @@ body {
 	font-size:1em;
 	padding:10px 15px;
 	font-family: 'ambleregular';
-	background:lightblue;
+	background:#2eadd3;
 	color: #FFF;
 	border:none;
 	text-decoration: none;
